--- a/algorithms.cbp
+++ b/algorithms.cbp
@@ -40,6 +40,7 @@
 		<Unit filename="sorts/quick_sort.h" />
 		<Unit filename="sorts/sorts.h" />
 		<Unit filename="utils/int_to_array.h" />
+		<Unit filename="utils/minmax.h" />
 		<Unit filename="utils/swap.h" />
 		<Unit filename="utils/utils.h" />
 		<Extensions>
